Add redundancy and complexity analysis documentation;